# platform.core.uifw.e-mod-tizen-screen-reader

./: autogen.sh  configure.ac  project.config
packaging/: e-mod-tizen-screen-reader.spec
src/: .e_mod_main.c.swp  Makefile.am  e_mod_main.c  e_mod_main.h  e_screen_reader_config.c  e_screen_reader_config.h  e_screen_reader_gestures.c  e_screen_reader_private.h
